--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,33 @@
   box-sizing:border-box;
   font-family: 'Roboto', sans-serif;
 }
+
+nav {
+  height:70px;
+  display:flex;
+  justify-content: space-between;
+  align-items:center;
+  padding:0 16px;
+  background-color:#cafdff;
+}
+
+a{
+  color:black;
+  text-decoration: none;
+  font-size:24px;
+  font-weight:bold;
+}
+
+
+.logo{
+  width:300px;
+}
+
+ul{
+  display:flex;
+}
+
+li{
+  list-style:none;
+  padding:16px;
+}
