--- a/css/styles.css
+++ b/css/styles.css
@@ -145,7 +145,7 @@ form{
   flex-direction: column;
   justify-content: center;
   margin:0 auto;
-  
+  padding:0 24px;
 }
 
 input, textarea{
@@ -215,6 +215,36 @@ footer{
     display:none;
   }
 
-  .logo{
-    margin:0 auto;
+.section__description{
+  flex-direction:column;
+  font-weight: bold;
+}
+
+.section__description--wrapper{
+  width:100%;
+}
+
+.about__img--wrapper{
+  width:100%;
+}
+
+#discord, .section__description{
+  flex-direction: column-reverse;
+}
+
+footer {
+  padding:48px 24px;
+}
+
+.footer__logo{
+  max-width:360px;
+}
+
+.footer__link{
+  padding:0 4px;
+  font-size: 16px; 
+}
+.footer__links{
+  margin-bottom: 18px;
+}
 }
